@@ -3063,6 +3063,10 @@ is assumed by some @R{} packages. Neither are tested by
 compiled in.  As the latter suffice and are tested with @R{} you should
 not need to change this.
 
+Option @option{--with-system-tre} is also available: it needs a recent
+version of TRE (currently only from the @command{git} repository at
+@url{https://github.com/laurikari/tre/}).
+
 @code{liblzma} from @code{xz-utils} version 5.0.3 or later will be used
 if installed: the version in the @R{} sources can be selected instead by
 configuring with @option{--with-system-xz=no}.  Systems differ in what
